--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,19 +45,19 @@ jobs:
         brew install libomp
     
     - name: Install Python dependencies
-  run: |
-    python -m pip install --upgrade pip
-    pip install pyinstaller
-    
-    # Install PyTorch with CPU-only to reduce size
-    pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-    
-    # Install other requirements including bpy
-    pip install transformers python-box einops omegaconf pytorch_lightning lightning
-    pip install addict timm fast-simplification trimesh open3d pyrender huggingface_hub
-    pip install bpy==4.2
-    
-    # Skip flash_attn for executable builds (has platform issues)
+      run: |
+        python -m pip install --upgrade pip
+        pip install pyinstaller
+        
+        # Install PyTorch with CPU-only to reduce size
+        pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+        
+        # Install other requirements including bpy
+        pip install transformers python-box einops omegaconf pytorch_lightning lightning
+        pip install addict timm fast-simplification trimesh open3d pyrender huggingface_hub
+        pip install bpy==4.2
+        
+        # Skip flash_attn for executable builds (has platform issues)
     
     - name: Create PyInstaller spec file
       shell: bash
@@ -86,7 +86,7 @@ jobs:
         hiddenimports += collect_submodules('lightning')
         hiddenimports += collect_submodules('trimesh')
         hiddenimports += collect_submodules('open3d')
-        hiddenimports += ['einops', 'omegaconf', 'addict', 'timm']
+        hiddenimports += ['einops', 'omegaconf', 'addict', 'timm', 'bpy']
         
         a = Analysis(
             ['run_executable.py'],
@@ -97,7 +97,7 @@ jobs:
             hookspath=[],
             hooksconfig={},
             runtime_hooks=[],
-            excludes=['bpy', 'flash_attn'],  # Exclude problematic modules
+            excludes=['flash_attn'],  # Exclude problematic modules
             win_no_prefer_redirects=False,
             win_private_assemblies=False,
             cipher=None,
